Add "ITKMITL Git101 Course" to the end of the email

--- a/email.html
+++ b/email.html
@@ -41,7 +41,7 @@
                         </table>
                         <p>This is a really simple email template. Its sole purpose is to get the recipient to click the button with no distractions.</p>
                         <p>Good luck! Hope it works.</p>
-                        <p>Test</p>
+                        <p>ITKMITL Git101 Course</p>
                       </td>
                     </tr>
                   </table>
