--- a/email-inlined.html
+++ b/email-inlined.html
@@ -146,6 +146,7 @@
                         </table>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">This is a really simple email template. It's sole purpose is to get the recipient to click the button with no distractions.</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Good luck! Hope it works.</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">ITKMITL Git101 Course</p>
                       </td>
                     </tr>
                   </table>
